# founderOs

./: .gitignore  README.md  business_strategy_output.json  execution_output.json  idea_agent.ipynb  idea_output.json  main.py  notebook_code.py  pyproject.toml  validation_output.json
startup_flow/: __init__.py  app.py  config.py  journey.py  llm.py  memory.py  schemas.py
startup_flow/routers/: __init__.py  stages.py
startup_flow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_stages.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/tests/: workspace.test.tsx
